# Restaurant-System-Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  DOMAIN.md  README.md  SETUP.md  cli.md  db-compose.yaml  docker-compose.yml  pyproject.toml  rxconfig.py
.github/workflows/: .gitkeep  deploy-db.yml
Supabase/database/legacy/: 03_sp_data_insert.sql
Supabase/database/supabase/: README.md  README_API.md
backend/: .env.example  Dockerfile  README.md
backend/docs/: 04_seeds.md
backend/src/test/: requirements.txt  test_connection.py  test_schema_creation.py
database/legacy/: 01_tables.sql  README.md
database/supabase/: config.toml
database/supabase/openapi/: openapi.yaml
database/supabase/schemas/: 00_setup_users.sql  02_sp_order_handling.sql
database/supabase/seed/: base_models.sql
database_service/: main.py
docs/: 001_entidades.md  002_entidades_checklist.md  002_entidades_fluxo.md  AGENTS.md  API.md  README.md  TESTING.md  entidades.mmd
docs/audit_evidence/: 01_initial_pytest_fail.html  01_initial_pytest_fail.txt  01_initial_pytest_output.txt  02_mypy_output.html  02_ruff_check.txt  02_ruff_output.html  03_after_fix_pytest_output.txt  03_after_fixes_pytest_green.html  03_after_fixes_pytest_green.txt  04_coverage_report.html  04_coverage_report.txt  06_health_checks.txt  09_final_pytest_cov.txt
frontend/: .env.example  Dockerfile  README.md  index.html  package.json
frontend/src/mocks/: estoque.json  funcionarios.json  mesas.json  pedidos.json  pratos.json
frontend/src/pages/: ConnectPage.tsx  EstoquePage.tsx  GestaoPage.tsx  PedidosPage.tsx  PratosPage.tsx
frontend/src/services/: DataService.ts
legacy_backend/: .dockerignore  .gitignore
legacy_backend/docs/: 05_api_crud.md  gols.md
legacy_backend/src/api/: .env  README.md  app.py
legacy_backend/src/db/: README.md  service.py
legacy_backend/src/test/: README.md
legacy_frontend/src/: App.tsx
legacy_frontend/src/hooks/: useSync.ts
legacy_portal/: .gitignore  Boteco.md  rules.md
legacy_portal/.github/: copilot-instructions.md
legacy_portal/app/: theme.py
legacy_root/docs/: MVP.md
legacy_root/legacy_frontend/: .gitignore  package-lock.json
legacy_root/legacy_portal/: requirements.txt
portal/: .dockerignore  Barnostri.md  Dockerfile  plan.md
portal-service/: requirements.txt
portal/app/: styles.py
portal/snippets/: README.md
portal_service/: app.py  tenant_registry.py
services/: __init__.py
services/database_service/: README.md  __init__.py  app.py  main.py  models.py  schemas.py
services/portal_service/: README.md  __init__.py  app.py  client.py  main.py
supabase/: AGENTS.md  README.md  config.toml
supabase/schemas/: setup.sql
tests/: test_config_and_health.py  test_database_service.py  test_portal_integration.py
(+72 files in other folders)
