[project]
name = "restaurant-system-backend"
version = "0.1.0"
description = "Two-service multi-tenant baseline with Reflex portal and SQLite data service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.35",
  "uvicorn>=0.30.0",
  "reflex>=0.6.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
