[project]
name = "restaurant-system-backend"
version = "0.1.0"
description = "Two-service multi-tenant baseline with Reflex portal and SQLite data service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.35",
  "uvicorn>=0.30.0",
  "reflex>=0.6.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0.20241016",
  "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["^\\.venv/", "^docs/audit_evidence/"]
